# paper-learning

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1f0c0de0001_0001_initial_schema.py
backend/app/: __init__.py  admin.py  auth.py  config.py  db.py  jsonparse.py  llm.py  main.py  material.py  migrate_data.py  models.py  runtime.py  schema.py  sessions.py  storage.py  tutor.py  tutor_prompts.py
backend/app/planner/: __init__.py  acquire.py  comprehend.py  ingest.py  plan.py  project.py  prompts.py
backend/app/retrieval/: __init__.py  arxiv.py  http.py  identify.py  openalex.py  semantic_scholar.py  types.py
backend/tests/: e2e_plan.py  test_api.py  test_ingest.py  test_retrieval_live.py  test_schema.py  test_sessions.py  test_tutor.py
docker/: entrypoint.sh
docs/: DESIGN.md  KICKOFF.md  WORKSTREAMS.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts  vite-env.d.ts
frontend/src/components/: ChatPane.tsx  CurriculumBar.tsx  LoginGate.tsx  Markdown.tsx  SessionSidebar.tsx  SessionView.tsx  TrackNav.tsx  UploadZone.tsx
frontend/src/hooks/: use-mobile.ts
frontend/src/lib/: api.ts  chatStream.ts  mock.ts  utils.ts
