[project]
name = "paper-learning-backend"
version = "0.1.0"
description = "Upload a paper, get a grounded knowledge graph projected into prerequisite / landscape / trends / paper tracks, and learn it via a Socratic chat tutor"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "boto3>=1.35",
    "authlib>=1.3",
    "itsdangerous>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live: hits real external APIs (deselect with -m 'not live')",
]
